--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/cdk": "^2.0.0-beta.10",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/cli": "^1.4.1",
     "@angular/common": "^4.3.6",
     "@angular/compiler": "^4.3.6",
@@ -21,10 +21,11 @@
     "@angular/core": "^4.3.6",
     "@angular/forms": "^4.3.6",
     "@angular/http": "^4.3.6",
-    "@angular/material": "^2.0.0-beta.10",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
+    "angular2-jwt": "^0.2.3",
     "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.4.3",
