--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +28,7 @@
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
+    "nodemon": "^1.12.1",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.17"
   },
