--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^4.3.6",
     "angular2-jwt": "^0.2.3",
     "core-js": "^2.5.1",
+    "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
     "nodemon": "^1.12.1",
     "rxjs": "^5.4.3",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@angular/language-service": "^4.2.4",
+    "@types/crypto-js": "^3.1.37",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
