--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/cli": "^1.4.1",
+    "@angular/cli": "^1.7.3",
     "@angular/common": "^4.3.6",
     "@angular/compiler": "^4.3.6",
     "@angular/compiler-cli": "^4.4.0-RC.0",
@@ -26,27 +26,27 @@
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
     "angular2-jwt": "^0.2.3",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.3",
     "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
-    "nodemon": "^1.12.1",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.17"
+    "nodemon": "^1.17.2",
+    "rxjs": "^5.5.7",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/language-service": "^4.2.4",
-    "@types/crypto-js": "^3.1.37",
+    "@types/crypto-js": "^3.1.38",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.102",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
