--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/router": "^4.3.6",
     "angular2-jwt": "^0.2.3",
+    "angular2-text-mask": "^8.0.4",
     "core-js": "^2.5.3",
     "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
     "nodemon": "^1.17.2",
     "rxjs": "^5.5.7",
+    "vanilla-text-mask": "^5.0.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
