--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.5",
     "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.1",
     "nodemon": "^1.17.3",
     "rxjs": "^5.5.2",
     "vanilla-text-mask": "^5.0.1",
